syntax = "proto3";

message UploadMultimediaRequest {
    string modelId = 1;
    bytes data = 2;
}

message UploadMultimediaResponse {
    string description = 1;
}

message DownloadMultimediaRequest {
    string modelId = 1;
    int32 multimediaIndex = 2;
}

message DownloadMultimediaResponse {
    bytes data = 1;
}

service MultimediaService {
    rpc uploadProfilePhoto (stream UploadMultimediaRequest) returns (UploadMultimediaResponse);
    rpc downloadProfilePhoto (DownloadMultimediaRequest) returns (stream DownloadMultimediaResponse);

    rpc uploadAccommodationMultimedia (stream UploadMultimediaRequest) returns (UploadMultimediaResponse);
    rpc downloadAccommodationMultimedia (DownloadMultimediaRequest) returns (stream DownloadMultimediaResponse);
}